i18n(it): update why-astro + fixed typo

--- a/src/content/docs/it/concepts/why-astro.mdx
+++ b/src/content/docs/it/concepts/why-astro.mdx
@@ -33,9 +33,9 @@ Astro è...
 
 ### Orientato al contenuto
 
-**Astro è stato progettato per la creazione di siti web ricchi di contenuti.** Ciò include la maggior parte dei siti di marketing, siti di pubblicazione, siti di documentazione, blog, portfolio e alcuni siti di e-commerce.
+**Astro è stato progettato per la creazione di siti web ricchi di contenuti.** Ciò include siti di marketing, siti di pubblicazione, siti di documentazione, blog, portfolio, landing page, siti di community e siti di e-commerce. Se hai contenuti da mostrare, devono raggiungere il tuo lettore rapidamente.
 
-Al contrario, la maggior parte dei moderni web framework sono progettati per la creazione di *applicazioni web*. Questi framework funzionano meglio per la creazione di esperienze più complesse simili a quelle delle applicazioni nel browser: dashboard di amministrazione con accesso, caselle di posta, social networks, liste di attività e persino applicazioni simili a quelle native come [Figma](https://figma.com/) e [Ping](https://ping.gg/).
+Al contrario, la maggior parte dei moderni web framework sono progettati per la creazione di *applicazioni web*. Questi framework eccellono nella creazione di esperienze più complesse simili a quelle delle applicazioni nel browser: dashboard di amministrazione con accesso, caselle di posta, social networks, liste di attività e persino applicazioni simili a quelle native come [Figma](https://figma.com/) e [Ping](https://ping.gg/). Tuttavia, con quella complessità, possono faticare a fornire ottime prestazioni quando si tratta di distribuire i tuoi contenuti.
 
 L'attenzione di Astro sui contenuti fin dalle sue origini come costruttore di siti statici ha permesso ad Astro di **scalare in modo sensato verso applicazioni web dinamiche, potenti e performanti** che rispettano ancora i tuoi contenuti e il tuo pubblico. L'unico focus di Astro sui contenuti permette ad Astro di fare scelte e fornire caratteristiche di performance ineguagliate che non avrebbero senso per altri framework web più focalizzati sulle applicazioni.
 
@@ -62,7 +62,7 @@ Buone prestazioni sono sempre importanti, ma sono *particolarmente* critiche per
 
 In molti web framework è facile creare un sito web che sembra ottimo durante lo sviluppo, ma che si carica lentamente una volta distribuito. Spesso il colpevole è JavaScript, poiché i telefoni degli utenti e i dispositivi meno potenti raramente corrispondono alla velocità di un computer portatile dello sviluppatore.
 
-La magia di Astro sta nel modo in cui combina i due valori spiegati sopra: un'attenzione al contenuto con un'architettura MPA orientata al server, unendo questi due approcci in manieria ottimale e offrire funzionalità che altri framework non possono offrire. Il risultato sono prestazioni web straordinarie per ogni sito web, direttamente dalla confezione. Il nostro obiettivo: **Dovrebbe essere quasi impossibile creare un sito web lento con Astro.**
+La magia di Astro sta nel modo in cui combina i due valori spiegati sopra: un'attenzione al contenuto con un'architettura MPA orientata al server, unendo questi due approcci in maniera ottimale e offrire funzionalità che altri framework non possono offrire. Il risultato sono prestazioni web straordinarie per ogni sito web, direttamente dalla confezione. Il nostro obiettivo: **Dovrebbe essere quasi impossibile creare un sito web lento con Astro.**
 
 Un sito web Astro può [caricarsi più velocemente del 40% con il 90% in meno di JavaScript](https://twitter.com/t3dotgg/status/1437195415439360003) rispetto allo stesso sito costruito con il web framework React più utilizzato. Ma non fidarti delle nostre parole: guarda questo video in cui Ryan Carniato (creatore di Solid.js e Marko) rimane [senza parole](https://youtu.be/2ZEMb_H-LYE?t=8163) di fronte alle prestazioni di Astro.
 
