--- a/src/content/docs/it/getting-started.mdx
+++ b/src/content/docs/it/getting-started.mdx
@@ -1,19 +1,15 @@
 ---
-title: Come iniziare  
-description: Un'introduzione di base ad Astro.
+title: Come iniziare
+description: Guide, risorse e riferimenti API per aiutarti a costruire con Astro — il framework web per siti basati sui contenuti.
 i18nReady: true
 tableOfContents: false
 editUrl: false
 next: false
-banner: 
-  content: |
-    <a href="https://astro.build/blog/astro-4/">La versione 4.0 di Astro è qui!</a>
-    Sei pronto per l'aggiornamento? <a href="/it/guides/upgrade-to/v4/">Leggi la nostra guida all'aggiornamento</a>.
 hero:
-  title: Documentazione Astro
+  title: Astro Docs
   tagline: Guide, risorse e riferimenti API per aiutarti a costruire con Astro.
   actions:
-    - text: Inizia
+    - text: Installa Astro
       icon: rocket
       link: /it/install-and-setup/
     - text: Scopri le funzionalità di Astro
@@ -22,7 +18,7 @@ hero:
       link: /it/concepts/why-astro/
   facepile:
     tagline: Offerto da Astro e dai nostri contributori open source.
-    linkText: Unisciti a noi! 
+    linkText: Unisciti a noi!
     link: /it/contribute/
 ---
 
@@ -58,7 +54,7 @@ import Discord from '~/components/Landing/Discord.astro'
   </ListCard>
 
   <ListCard title="Espandi" icon="puzzle">
-    - [Aggiungi integrazioni come React e Tailwind](/it/guides/integrations-guide/)
+    - [Aggiungi integrazioni come React e Partytown](/it/guides/integrations-guide/)
     - [Crea raccolte di contenuti con tipizzazione](/it/guides/content-collections/)
     - [Migliora la navigazione con le transizioni di vista](/it/guides/view-transitions/)
     - [Collega un CMS headless al tuo progetto](/it/guides/cms/)
